--- a/public/styles.css
+++ b/public/styles.css
@@ -8,6 +8,7 @@ html {
 }
 body {
   background: #eee;
+  background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
   padding: 0 16px;
 }
 
@@ -66,14 +67,8 @@ footer p {
   cursor: pointer;
   outline: none;
 }
-button:disabled{
-        border: 1px solid #999999;
-        background-color: darkgrey;
-        color: #fff;
-       
-        cursor: not-allowed;
-}
-form {
+
+form.create-note {
   position: relative;
   width: 480px;
   margin: 30px auto 20px auto;
@@ -82,8 +77,8 @@ form {
   border-radius: 7px;
   box-shadow: 0 1px 5px rgb(138, 137, 137);
 }
-form input,
-form textarea {
+form.create-note input,
+form.create-note textarea {
   width: 100%;
   border: none;
   padding: 4px;
@@ -92,7 +87,7 @@ form textarea {
   font-family: inherit;
   resize: none;
 }
-form button {
+form.create-note button {
   position: absolute;
   right: 18px;
   bottom: -18px;
